<resources>
    <string name="app_name">Blackjack</string>
    <string name="website">Learn about the Game</string>
    <string name="game">Play Blackjack</string>
    <string name="welcome">Welcome to Blackjack. The closer you are to 21 points the better your chances of winning. If you go over 21 points, you lose. Once you enter the game, you can place a bet.</string>
    <string name="details">Click here for more details</string>
    <string name="dealerScore">00</string>
    <string name="dealer">Dealer Score</string>
    <string name="playerScore">00</string>
    <string name="player">Player Score</string>
    <string name="gameInstruction">Click both stacks of cards to begin your turn.</string>
    <string name="bettingInstruction">Choose Betting Amount</string>
    <string name="hit">HIT</string>
    <string name="stand">STAND</string>
    <string name="dealer_s_hand">Dealer\'s Hand</string>
    <string name="playerHand">Player\'s Hand</string>
    <string-array name="betting_amounts">
        <item>$1,000</item>
        <item>$2,000</item>
        <item>$3,000</item>
        <item>$4,000</item>
        <item>$5,000</item>
        <item>$6,000</item>
        <item>$7,000</item>
        <item>$8,000</item>
        <item>$9,000</item>
        <item>$10,000</item>
    </string-array>
</resources>
